src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ERCZ_Academic_Title__c</fullName>
        <label>Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>as.</fullName>
                </value>
                <value>
                    <fullName>CSc.</fullName>
                </value>
                <value>
                    <fullName>DiS.</fullName>
                </value>
                <value>
                    <fullName>doc.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>DrSc.</fullName>
                </value>
                <value>
                    <fullName>DSc.</fullName>
                </value>
                <value>
                    <fullName>Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing. arch.</fullName>
                </value>
                <value>
                    <fullName>JUDr.</fullName>
                </value>
                <value>
                    <fullName>MDDr.</fullName>
                </value>
                <value>
                    <fullName>MgA.</fullName>
                </value>
                <value>
                    <fullName>Mgr.</fullName>
                </value>
                <value>
                    <fullName>MSDr.</fullName>
                </value>
                <value>
                    <fullName>MUDr.</fullName>
                </value>
                <value>
                    <fullName>MVDr.</fullName>
                </value>
                <value>
                    <fullName>odb. as.</fullName>
                </value>
                <value>
                    <fullName>PaedDr.</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>PharmDr.</fullName>
                </value>
                <value>
                    <fullName>PhDr.</fullName>
                </value>
                <value>
                    <fullName>PhMr.</fullName>
                </value>
                <value>
                    <fullName>prof.</fullName>
                </value>
                <value>
                    <fullName>RCDr.</fullName>
                </value>
                <value>
                    <fullName>RNDr.</fullName>
                </value>
                <value>
                    <fullName>RSDr.</fullName>
                </value>
                <value>
                    <fullName>RTDr.</fullName>
                </value>
                <value>
                    <fullName>Th.D.</fullName>
                </value>
                <value>
                    <fullName>ThDr.</fullName>
                </value>
                <value>
                    <fullName>ThLic.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_AID_Authorization__c</fullName>
        <label>AID Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_AID_Clearing__c</fullName>
        <label>AID Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_AID_MID__c</fullName>
        <label>AID_MID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_AID__c</fullName>
        <label>AID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_BUPicklist__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Do_not_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Email_Opt_Out_Logo__c</fullName>
        <formula>IF(HasOptedOutOfEmail=true,IMAGE(&apos;/resource/ER_Email_Opt_Out&apos;,&apos;ER_Email_Opt_Out&apos;,40,40),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opt Out</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Lead provider</fullName>
                </value>
                <value>
                    <fullName>Trade association</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Lead_sub_source__c</fullName>
        <label>Lead sub-source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adwords: Google, Bing</fullName>
                </value>
                <value>
                    <fullName>Other adwords</fullName>
                </value>
                <value>
                    <fullName>Lead provider</fullName>
                </value>
                <value>
                    <fullName>Public Register - list of existing companies</fullName>
                </value>
                <value>
                    <fullName>Public Register - list of new created companies</fullName>
                </value>
                <value>
                    <fullName>Abandonned contracting</fullName>
                </value>
                <value>
                    <fullName>Internal Webform</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Legal_City__c</fullName>
        <label>Legal City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Country__c</fullName>
        <label>Legal Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Street__c</fullName>
        <label>Legal Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Zip_Code__c</fullName>
        <label>Legal Zip Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MCC_Authorization__c</fullName>
        <label>MCC Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MCC_Clearing__c</fullName>
        <label>MCC Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID_AID__c</fullName>
        <label>MID_AID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ER_MID_Authorization__c</fullName>
        <label>MID Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID_Clearing__c</fullName>
        <label>MID Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_MID__c</fullName>
        <label>MID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Number_Of_Beneficiaries__c</fullName>
        <label>Number Of Beneficiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Number_Of_Vehicles__c</fullName>
        <label>Number Of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Number_of_outlets__c</fullName>
        <label>Number of outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Other_Fiscal_ID__c</fullName>
        <label>Other Fiscal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Product_Family_Interest__c</fullName>
        <label>Solution family interest</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ER_Product_Family</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Purchasing Manager</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Management assistant</fullName>
                </value>
                <value>
                    <fullName>Administrative employee</fullName>
                </value>
                <value>
                    <fullName>HR Director</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
                <value>
                    <fullName>Independant administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ER_BUPicklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERHU_Edenred_Gift_Card</fullName>
                    <label>Edenred Gift Card</label>
                </value>
                <value>
                    <fullName>ERHU_Edenred_Schooling_Card</fullName>
                    <label>Edenred Schooling Card</label>
                </value>
                <value>
                    <fullName>ERHU_Edenred_Culture_&amp;_Sport_Card</fullName>
                    <label>Edenred Culture &amp; Sport Card</label>
                </value>
                <value>
                    <fullName>ERPL_Gift</fullName>
                    <label>Gift</label>
                </value>
                <value>
                    <fullName>ERPL_Sport and Culture</fullName>
                    <label>Sport and Culture</label>
                </value>
                <value>
                    <fullName>ERPL_TR</fullName>
                    <label>TR</label>
                </value>
                <value>
                    <fullName>ERPL_Incentive</fullName>
                    <label>Incentive</label>
                </value>
                <value>
                    <fullName>ERPL_Spendeo</fullName>
                    <label>Spendeo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Store_Name__c</fullName>
        <label>Store Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Sub_MID_Authorization__c</fullName>
        <label>Sub MID Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Sub_MID_Clearing__c</fullName>
        <label>Sub MID Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TID_Authorization__c</fullName>
        <label>TID Authorization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TID_Clearing__c</fullName>
        <label>TID Clearing</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Terminal__c</fullName>
        <label>Terminal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                    <default>true</default>
                    <label>Don&apos;t know</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_UTM_tag__c</fullName>
        <label>UTM tag</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Enterprise_Number__c</fullName>
        <label>Enterprise Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_High_level_activity__c</fullName>
        <label>High level activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant &amp; Food</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Language__c</fullName>
        <defaultValue>$User.ER_BUText__c</defaultValue>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ER_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Legal_Form__c</fullName>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Legal_State_Province__c</fullName>
        <label>Legal State/Province</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_NaceList__c</fullName>
        <description>NACE list separated by semicolumn</description>
        <label>Nace List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ER_NaceNameList__c</fullName>
        <label>Nace Name List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ER_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No interest</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No Terminal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Client_Team_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Client Sales Team</label>
        <language>en_US</language>
        <queue>Client_Team</queue>
        <sharedTo>
            <role>Client_Sales_Manager</role>
            <role>Client_Sales_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Client_Leads_Poland</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <label>Client Leads Poland</label>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Multiproduct_HQ_WAW_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Multiproduct HQ WAW</label>
        <queue>ERPL_Multiproduct_HQ_WAW</queue>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Multiproducts_REGIONS_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Multiproducts REGIONS</label>
        <queue>ERPL_Multiproducts_REGIONS</queue>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Sales_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchant Telesales</label>
        <queue>ERCZ_Merchant_Telesales</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Zlinsky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Zlínský</label>
        <queue>ERCZ_Merchants_Zlinsky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Vysocina_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Vysočina</label>
        <queue>ERCZ_Merchants_Vysocina</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERPL_Client_Sales</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>ERPL Client Sales</label>
        <language>en_US</language>
        <queue>ERPL_Client_Sales</queue>
        <sharedTo>
            <roleAndSubordinates>Poland</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Hlavn_m_sto_Praha_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Hlavní město Praha</label>
        <queue>ERCZ_Merchants_Hlavni_mesto_Praha</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Olomoucky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Olomoucký</label>
        <queue>ERCZ_Merchants_Olomoucky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Pardubicky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Pardubický</label>
        <queue>ERCZ_Merchants_Pardubicky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Ustecky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Ústecký</label>
        <queue>ERCZ_Merchants_Ustecky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Stredocesky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Středočeský</label>
        <queue>ERCZ_Merchants_Stredocesky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ERCZ_Merchant_Plzensky_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>ERCZ Merchants : Plzeňský</label>
        <queue>ERCZ_Merchants_Plzensky</queue>
        <sharedTo>
            <roleAndSubordinates>Czech_Republic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ER_Client_Lead_RT</fullName>
        <active>true</active>
        <businessProcess>Client Lead Process</businessProcess>
        <label>Client Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Merchant_Lead_RT</fullName>
        <active>true</active>
        <businessProcess>Merchant Lead Process</businessProcess>
        <label>Merchant Lead</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER001_Lead_Conversion_Mandatory</fullName>
        <active>true</active>
        <description>The fields Company, Email and LastName must be filled in order to convert the Lead</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
 ISPICKVAL(Status,&quot;Qualified&quot;),
OR(
ISBLANK(Company),
ISBLANK(Email),
ISBLANK(LastName),
ISBLANK(FirstName)))</errorConditionFormula>
        <errorMessage>The fields Company, Email, LastName and FirstName must be filled in order to convert the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER02_Lead_Solution_Obligatory</fullName>
        <active>false</active>
        <description>Solution field is obligatory for the lead coming from Merchant or Unmatched Transactions</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
RecordType.DeveloperName = &quot;ER_Merchant_Lead_RT&quot;,
OR(
ISPICKVAL(ER_Lead_Channel__c ,&quot;User&quot;),
ISPICKVAL(ER_Lead_Channel__c ,&quot;Customer&quot;)), 
(ISBLANK(TEXT( ER_Solution__c ))
))</errorConditionFormula>
        <errorDisplayField>ER_Solution__c</errorDisplayField>
        <errorMessage>The field Solution must be filled in order to register the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER03_Lead_StoreName_Obligatory</fullName>
        <active>true</active>
        <description>Information about Store Name is obligatory for the Led Channel = Unmatched, User, Client</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c), 
RecordType.DeveloperName = &quot;ER_Merchant_Lead_RT&quot;, 
ISBLANK ( ER_Store_Name__c ),
NOT(
ISPICKVAL( ER_Lead_Channel__c ,&quot;Merchant&quot;)))</errorConditionFormula>
        <errorDisplayField>ER_Store_Name__c</errorDisplayField>
        <errorMessage>The field Store Name must be filled in order to register the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER04_Lead_Address_Obligatory</fullName>
        <active>true</active>
        <description>Address information is obligatory for the User and Customer lead channel</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c),
RecordType.DeveloperName = &quot;ER_Merchant_Lead_RT&quot;, 
ISBLANK (  Street  ),
OR( 
ISPICKVAL(ER_Lead_Channel__c ,&quot;User&quot;), 
ISPICKVAL(ER_Lead_Channel__c ,&quot;Customer&quot;))
)</errorConditionFormula>
        <errorDisplayField>Street</errorDisplayField>
        <errorMessage>The address information must be filled in order to register the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER05_Lead_Registration_Mandatory</fullName>
        <active>true</active>
        <description>On the lead creation Salutation and First Name are obligatory</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
ISPICKVAL(Status,&quot;New&quot;),
OR(
ISBLANK(TEXT( Salutation )),
ISBLANK(FirstName)))</errorConditionFormula>
        <errorMessage>The fields Salutation and First Name must be filled in order to save the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER06_Lead_VATOrRegistrationId_Convert</fullName>
        <active>true</active>
        <description>VAT Number or Registration ID is Mandatory for Lead Conversion</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),  
ER_Business_Unit__c != &apos;BE&apos;,
AND( 
IsConverted =true,
ISBLANK(ER_VAT_Number__c), 
ISBLANK( ER_Registration_Number__c)
)
)</errorConditionFormula>
        <errorMessage>Filling VAT Number or Company Registration Number is mandatory for conversion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER07_Lead_Rejected_Reason</fullName>
        <active>true</active>
        <description>User should precised lead rejected reason on case of lead status = rejected</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c),
ISPICKVAL(Status,&quot;Rejected&quot;),
ISBLANK(TEXT(ER_Rejected_Reason__c)))</errorConditionFormula>
        <errorDisplayField>ER_Rejected_Reason__c</errorDisplayField>
        <errorMessage>The Rejected Reason must be filled in order to save the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER08_Lead_MID_Mandatory</fullName>
        <active>true</active>
        <description>When Lead Channel is equal to &quot;Unmatched&quot; --&gt; The MID is mandatory</description>
        <errorConditionFormula>AND(
NOT($User.ER_BypassVR__c), 
RecordType.DeveloperName = &quot;ER_Merchant_Lead_RT&quot;, 
ISBLANK ( ER_MID__c ),
ISPICKVAL( ER_Lead_Channel__c ,&quot;Unmatched&quot;))</errorConditionFormula>
        <errorMessage>The field MID must be filled in order to register the Lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VRER09_Lead_NbOfOutlets_Mandatory</fullName>
        <active>true</active>
        <description>When the Lead channel is &quot;Merchant&quot; --&gt; Number of outlets is mandatory</description>
        <errorConditionFormula>AND( 
NOT($User.ER_BypassVR__c), 
RecordType.DeveloperName = &quot;ER_Merchant_Lead_RT&quot;, 
ISBLANK (ER_Number_of_outlets__c), 
ISPICKVAL( ER_Lead_Channel__c ,&quot;Merchant&quot;))</errorConditionFormula>
        <errorMessage>The field Number Of Outlets must be filled in order to register the Lead</errorMessage>
    </validationRules>
</CustomObject>